# arena-router

./: .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  HANDOFF.md  README.md  competition.toml  package-lock.json  package.json
.github/workflows/: checks.yml  full-run.yml  guard.yml  leaderboard.yml  smoke.yml
agent/: .gitignore  README.md  install-pi.sh.j2  pi_agent.py  pyproject.toml  test_pi_agent.py
arena/: COMPETITION.md  README.md  policy.template.ts  policy.ts  run.mjs  score.mjs  types.ts
arena/cli/: autorouter.mjs
arena/config/: catalog.json
arena/dev/: devset.json
competition/: LOCAL_SETUP.md  README.md  runner.mjs  runner.test.mjs
docs/: IMPLEMENTED.md  SECRETS.md  STRATEGY_REVIEW.md  USER_FLOW.md  architecture.excalidraw.json  arena-architecture.excalidraw.json  arena-routing.excalidraw.json  baseline-probe.md  benchmark-cost-survey.md  ci-anti-abuse.md  implementation-spec.md  smoke-subset.md
infra/: docker-compose.yml  prepull-images.sh  runner-setup.md
kit/: arena.mjs  arena.test.mjs  package.json  smoke.mjs  smoke.test.mjs
kit/skill/: SKILL.md
legacy/: .dockerignore  .env.example  Dockerfile  README.md  package.json  tsconfig.json
scripts/: gen-arena-excalidraw.py  gen-hiddenset.mjs  verify-openrouter.mjs
src/: cors.ts  crypto.ts  index.ts  main.ts  store.ts
test/: grader-score.test.ts  receipt.test.ts  verify.test.ts
ui/: .env.production  Dockerfile  README.md  index.html  package-lock.json  package.json  serve.mjs  tsconfig.json  vercel.json  vite.config.ts
web/: leaderboard.html  render.mjs  render.test.mjs  run.html
(+86 files in other folders)
